<resources>
    <string name="app_name">Akashi Toolkit</string>
    <string name="app_name_debug" translatable="false">Akashi Toolkit (debug)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="official_twitter">Official Twitter</string>
    <string name="about">About</string>
    <string name="maps">Map</string>
    <string name="setting">Settings</string>
    <string name="night_mode">Night mode</string>
    <string name="night_mode_off">Off</string>
    <string name="night_mode_on">On</string>
    <string name="night_mode_auto">Auto</string>
    <string name="night_mode_follow_system">Follow system</string>
    <string name="quest">Quest</string>
    <string name="refresh_fail">Refresh failed</string>
    <string name="new_twitter">%d new tweets</string>
    <string name="action_refresh">Refresh</string>
    <string name="category_general">General</string>
    <string name="category_twitter">Official Twitter</string>
    <string name="twitter_count">Tweets count</string>
    <string name="twitter_display_language">Display language</string>
    <string name="twitter_display_language_both">Both</string>
    <string name="twitter_display_language_ja">Original (Japanese)</string>
    <string name="twitter_display_language_zh">Translated (Simplified Chinese)</string>
    <string name="no_new_tweet">No new tweet</string>
    <string name="twitter_grid_layout">Grid layout</string>
    <string name="twitter_grid_layout_summary">Display two rows</string>
    <string name="twitter_history_avatars">History avatars</string>
    <string name="twitter_view_on_twitter">View on Twitter</string>
    <string name="ship">Ship</string>
    <string name="quest_reward">Reward</string>
    <string name="quest_require">Require</string>
    <string name="quest_consume">Consume</string>
    <string name="expedition">Expedition</string>
    <string name="expedition_flagship_format">Flagship lv: %s</string>
    <string name="expedition_flagship_total">Total lv: %s</string>
    <string name="version_format" formatted="false">%s (%d)</string>
    <string name="version">Version</string>
    <string name="category_update">Update &amp; message</string>
    <string name="update_check_channel">Update channel</string>
    <string name="every_time_open_app">Every view home (show in home)</string>
    <string name="manually">Manually</string>
    <string name="no_translated">(No translation right now)</string>
    <string name="item_improvement">Equip Improvement</string>
    <string name="reset_read">Reset read</string>
    <string name="got_it">Got it</string>
    <string name="not_now">Not now</string>
    <string name="ignore_update">Ignore this update</string>
    <string name="download">Download</string>
    <string name="reset_read_summary">Reset read messages including update notification</string>
    <string name="read_status_reset">Read status reset</string>
    <string name="stable">Stable</string>
    <string name="latest">Latest (maybe more problems)</string>
    <string name="please_refresh">Please refresh manually</string>
    <string name="open_link">Open link</string>
    <string name="todo_card_format" formatted="false">Current version: %s\n%s</string>
    <string name="today">(Today)</string>
    <string name="action_filter">Filter</string>
    <string name="action_search">Search</string>
    <string name="equip">Equip</string>
    <string name="attributes">Attributes</string>
    <string name="item_improvement_data">Equip improvement</string>
    <string name="remark">Remark</string>
    <string name="item_get">Source</string>
    <string name="data_source">Data source</string>
    <string name="category_item">Equip</string>
    <string name="display_enemy">Display enemy equip</string>
    <string name="introduction">Introduction</string>
    <string name="ship_can_equip">Ship can equip</string>
    <string name="ship_initial_equip">Initial equipped ships</string>
    <string name="image_load_error">Image load error</string>
    <string name="tools">Tools</string>
    <string name="exp_calc">Experience calculator</string>
    <string name="exp_calc_map">Map</string>
    <string name="exp_calc_result">Result</string>
    <string name="exp_calc_cur_lv">Current level</string>
    <string name="exp_calc_target_lv">Target level</string>
    <string name="exp_calc_to_next">Exp to next level</string>
    <string name="exp_calc_result_format" formatted="false">Total exp\n%d\n\nPer attack / Remainder\nBasic %d / %d\nFlagship %d / %d\nMVP %d / %d\nMVP and flagship %d / %d</string>
    <string name="exp_calc_error">Data error</string>
    <string name="ui_language">App language</string>
    <string name="data_language">Data language</string>
    <string name="data_language_title">Use Japanese title</string>
    <string name="data_language_title_summary">Show Japanese for title such as quest name</string>
    <string name="action_picture">Picture</string>
    <string name="illustration">Illustration</string>
    <string name="remodel">Remodel</string>
    <string name="equip_and_load">Initial equips &amp; load</string>
    <string name="equip_not_found">Equip not found (id: %d)</string>
    <string name="not_equipped">Not equipped</string>
    <string name="initial">Initial</string>
    <string name="saved">Saved %s</string>
    <string name="save_failed">Failed</string>
    <string name="require_write_external_storage_permission">Require WRITE_EXTERNAL_STORAGE permission to save file</string>
    <string name="open">Open</string>
    <string name="download_wifi_only">Download image via WiFi only</string>
    <string name="voice">Voice</string>
    <string name="new_content">Seasonal</string>
    <string name="category_notification">Notification</string>
    <string name="notification_sound">Notification sound</string>
    <string-array name="notification_priority">
        <item>Min</item>
        <item>Low</item>
        <item>Default</item>
        <item>High</item>
        <item>Max</item>
    </string-array>
    <string name="data_feedback">Feedback</string>
    <string name="sort">Sort</string>
    <string name="ship_type">Type</string>
    <string name="ship_class">Class</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="bookmark_add">Bookmarked</string>
    <string name="bookmark_remove">Removed</string>
    <string name="night_mode_require_restart">You need to restart app to take effect.</string>
    <string name="restart_app">Restart app</string>
    <string name="continue_use">Not now</string>
    <string name="night_mode_system_auto">The night mode setting of your system is auto, set in app will not take effect.</string>
    <string name="nav_bar_color">Navigation bar color</string>
    <string name="nav_bar_color_summary">Use theme color</string>
    <string name="category_cache">Cache</string>
    <string name="cache_max_size">Max cache size</string>
    <string name="no_limit">No limit</string>
    <string name="clear_cache">Clear cache</string>
    <string name="cleared">Cleared</string>
    <string name="clear_cache_summary">Clear cached images, voices…</string>
    <string name="ranking">Ranking</string>
    <string name="feedback_summary">Send email to developer</string>
    <string name="donate">Donate developer</string>
    <string name="donate_alipay">Donate developer (via Alipay)</string>
    <string name="telegram_group">Telegram group</string>
    <string name="telegram_group_join">Click to join (if you want to help develop)</string>
    <string name="qq_group">QQ group</string>
    <string name="source_code">Source code</string>
    <string name="send_via">Send via</string>
    <string name="no_mail_app">No mail app</string>
    <string name="copied_to_clipboard_format">%s copied to clipboard.</string>
    <string name="copied_to_clipboard">Copied to clipboard.</string>
    <string name="nothing_bookmarked">Nothing bookmarked</string>
    <string name="nothing_bookmarked_summary">You can add item to bookmark by long press it or click bookmark in detail view.</string>
    <string name="share">Share</string>
    <string name="share_text">Share text only</string>
    <string name="copy_original_text">Copy original text</string>
    <string name="copy_translated_text">Copy translated text</string>
    <string name="daily_equip_improve">Equip improvement today</string>
    <string name="bookmarked_items">Bookmarked items</string>
    <string name="bookmarked_items_no">No bookmarked item</string>
    <string name="all_equip_improve_item">All items</string>
    <string name="new_version_available">New version available</string>
    <string name="new_version_summary" formatted="false">Version: %s - %d</string>
    <string name="new_version_content" formatted="false">Detail: \n%s</string>
    <string name="enemy">Enemy</string>
    <string name="all">All</string>
    <string name="all_expedition_item">All items</string>
    <string name="expedition_finished">Expedition finished</string>
    <string name="expedition_notify">Expedition notify</string>
    <string name="finished">Finished</string>
    <string name="not_started">Not started</string>
    <string name="detail">Detail</string>
    <string name="attr_firepower">Firepower</string>
    <string name="attr_hp">HP</string>
    <string name="attr_aa">AA</string>
    <string name="attr_torpedo">Torpedo</string>
    <string name="attr_armor">Armor</string>
    <string name="attr_asw">ASW</string>
    <string name="attr_evasion">Evasion</string>
    <string name="attr_los">LOS</string>
    <string name="attr_speed">Speed</string>
    <string name="attr_range">Range</string>
    <string name="attr_range_aircraft">Range</string>
    <string name="attr_luck">Luck</string>
    <string name="attr_accuracy">Accuracy</string>
    <string name="attr_boom">Bombing</string>
    <string name="range_short">Short</string>
    <string name="range_medium">Medium</string>
    <string name="range_long">Long</string>
    <string name="range_very_long">Very long</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_slow">Slow</string>
    <string name="speed_none">None</string>
    <string name="improvement_branch" formatted="false">Branch → %s</string>
    <string name="improvement_any">Any</string>
    <string name="improvement_resource">RES</string>
    <string name="improvement_upgrade">UPG</string>
    <string name="improvement_upgrade_to">UPG to</string>
    <string name="open_in_new_document">Separate tasks</string>
    <string name="open_in_new_document_summary">Represent detail views as separate tasks in overview screen</string>
    <string name="show_ship_banner">Show ship banner</string>
    <string name="show_ship_banner_summary">Show banner in ship list and enemy list</string>
    <string name="not_remodel">Not remodeled</string>
    <string name="final_remodel">Final remodeled</string>
    <string name="equip_improve_list_ship_format">Ship: %s</string>
    <string name="quest_before">Quest before</string>
    <string name="quest_after">Quest after</string>
    <string name="quest_new">New</string>
    <string name="quest_latest">Latest</string>
    <string name="quest_normal">Normal quest</string>
    <string name="quest_daily">Daily quest</string>
    <string name="quest_weekly">Weekly quest</string>
    <string name="quest_monthly">Monthly quest</string>
    <string name="search_hint_quest">Search name, introduction…</string>
    <string name="search_hint_ship">Search name, Rōmaji, Pinyin…</string>
    <string name="search_result">Search result</string>
    <string name="fleets">Fleets</string>
    <string name="fleet_edit">Edit fleet</string>
    <string name="view_all">View all</string>
    <string name="view_all_format">View all (%d more)</string>
</resources>