<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="screen">

    <Preference
        android:key="developer"
        android:title="Send push message"/>

    <Preference
        android:key="feedback"
        android:title="@string/data_feedback"
        android:summary="@string/feedback_summary"/>

    <Preference
        android:key="donate"
        android:title="@string/donate"
        android:summary="支付宝: rikka@xing.moe"/>

    <Preference
        android:key="version"
        android:title="@string/version"/>

    <Preference
        android:title="@string/data_source"
        android:summary="kcwiki 舰娘百科">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://zh.kcwiki.moe/wiki/%E8%88%B0%E5%A8%98%E7%99%BE%E7%A7%91"/>

    </Preference>

    <!--<Preference
        android:title="SVG 图标来源"
        android:summary="edwardaaaa">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/edwardaaaa"/>

    </Preference>

    <Preference
        android:title="打滚求开发"
        android:summary="程序员、设计师什么的都可以啦qwq">

    </Preference>-->

    <Preference
        android:title="@string/telegram_group"
        android:summary="@string/telegram_group_join">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://telegram.me/joinchat/BwTlLwgLKRzQV_IcySMISw"/>

    </Preference>

    <Preference
        android:key="qq_group"
        android:title="@string/qq_group"
        android:summary="437033068">

    </Preference>

    <Preference
        android:title="@string/source_code"
        android:summary="https://github.com/kcwikizh/Akashi-Toolkit">

        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/kcwikizh/Akashi-Toolkit"/>

    </Preference>

</PreferenceScreen>