<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="rikka.akashitoolkit.ui.ExpCalcActivity">

    <include layout="@layout/content_app_bar"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="4dp"
                android:text="@string/exp_calc_map"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/spinner_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="8dp"
                android:text="@string/exp_calc_result"
                android:textSize="12sp"/>

            <Spinner
                android:id="@+id/spinner_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </Spinner>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textView_curLv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_calc_cur_lv"
                    android:inputType="number"
                    tools:text="1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textView_targetLv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_calc_target_lv"
                    android:inputType="number"
                    tools:text="99"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textView_expToNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exp_calc_to_next"
                    android:inputType="number"
                    tools:text="100"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView_calcResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="1dp"
                android:paddingBottom="4dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="8dp"
                tools:text="合计经验\n1000000\n\n每场经验 / 剩余场数\n基础 36 / 27777\n旗舰 36\nMVP\nMVP和旗舰"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>